Combined starfield & image divs
• Combined .starfield divs and the .image divs into a single div.
• Changed .image CSS selectors under starfields to `&.image, & .image` in order to apply to either a contained .image (as it was) or .image on the starfield itself (as it is now).
	• Using `&:extend(.starfield all)` to properly inherit all `.starfield` and `.starfield … .image` CSS w/o including it twice.
• Changed all starfield animation keyframes to start at `_sky_phase_start` and end at `_sky_phase_end`.
	• Changed opacity easing types to `linear` or the new `linearStartToMid` and `linearMidToEnd` in order to preserve starfields appearing halfway through or becoming fully opaque by halfway, without affecting the movement animation.
		» linearMidToEnd could be wasteful here, since there's no reason to animate the movement when it's not visible, but it probably won't be a big deal so I'll optimize it later if need be.
	• Added `linearStartToMid` and `linearMidToEnd` easing functions to the skrollr config, the former which returns 0 at or under halfway, and lerps the other half, and the latter which lerps the first half and returns 1.0 for the other half.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6499,14 +6499,19 @@ body {
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffaccdea', GradientType=0);
 }
+.starfield.image,
 .starfield .image,
+#starfield1.image,
+#starfield1 .image,
+#starfield2.image,
+#starfield2 .image,
+#starfield3.image,
 #starfield3 .image,
+#starfield4.image,
 #starfield4 .image {
   background-repeat: repeat;
 }
-#starfield1 .image {
-  background-repeat: repeat;
-}
+#starfield1.image,
 #starfield1 .image {
   background-position: 0px 0px;
   background: url('../graphics/starfield1.s512.png');
@@ -6525,17 +6530,15 @@ body {
   filter: alpha(opacity=0);
   -skrollr-animation-name: starfield2op;
 }
-#starfield2 .image {
-  background-repeat: repeat;
-}
 @-skrollr-keyframes starfield2op {
-  _sky_phase_center {
-    opacity[quadratic]: 0;
+  _sky_phase_start {
+    opacity[linearMidToEnd]: 0;
   }
   _sky_phase_end {
-    opacity[quadratic]: 1;
+    opacity[linearMidToEnd]: 1;
   }
 }
+#starfield2.image,
 #starfield2 .image {
   background-position: 0px 0px;
   background: url('../graphics/starfield2.s1024.png');
@@ -6554,17 +6557,15 @@ body {
   filter: alpha(opacity=0);
   -skrollr-animation-name: starfield3op;
 }
-#starfield3 .image {
-  background-repeat: repeat;
-}
 @-skrollr-keyframes starfield3op {
-  _sky_phase_center {
-    opacity[quadratic]: 0;
+  _sky_phase_start {
+    opacity[linearMidToEnd]: 0;
   }
   _sky_phase_end {
-    opacity[quadratic]: 1;
+    opacity[linearMidToEnd]: 1;
   }
 }
+#starfield3.image,
 #starfield3 .image {
   background-position: 0px 0px;
   background: url('../graphics/starfield3.s720.png');
@@ -6583,17 +6584,15 @@ body {
   filter: alpha(opacity=25);
   -skrollr-animation-name: starfield4op;
 }
-#starfield4 .image {
-  background-repeat: repeat;
-}
 @-skrollr-keyframes starfield4op {
   _sky_phase_start {
-    opacity[quadratic]: 0.25;
+    opacity[linearStartToMid]: 0.25;
   }
-  _sky_phase_center {
-    opacity[quadratic]: 1;
+  _sky_phase_end {
+    opacity[linearStartToMid]: 1;
   }
 }
+#starfield4.image,
 #starfield4 .image {
   background-position: 0px 0px;
   background: url('../graphics/starfield4.s700.png');
