Superminor: Forgot a semicolon.
• Added forgotten semicolon after `.generateStarfieldRules()`' opacity `_sky_phase_end`.

--- a/less/main.less
+++ b/less/main.less
@@ -110,7 +110,7 @@ html, body { height: 100%; }
 		.-skrollr-dry-animation(~"@{uniqueName}-op"; {
 			@opacityProp: ~"opacity[@{opacityEasing}]";
 			_sky_phase_start { @{opacityProp}: @initialOpacity; }
-			_sky_phase_end { @{opacityProp}: @endOpacity }
+			_sky_phase_end { @{opacityProp}: @endOpacity; }
 		});
 	}
 	
