--- a/less/styles-test.less
+++ b/less/styles-test.less
@@ -124,3 +124,15 @@ h1 { color: hsl(0, 0%, 50%); }
 .make-color-swatches-rules('purple-lighter');
 .make-color-swatches-rules('teal-lighter');
 .make-color-swatches-rules('yellow-lighter');
+
+.make-color-swatches-rules('sky-eve-top');
+.make-color-swatches-rules('sky-eve-mid');
+.make-color-swatches-rules('sky-eve-bottom');
+.make-color-swatches-rules('sky-eve-top-mid');
+.make-color-swatches-rules('sky-eve-bottom-mid');
+
+.make-color-swatches-rules('sky-night-top');
+.make-color-swatches-rules('sky-night-mid');
+.make-color-swatches-rules('sky-night-bottom');
+.make-color-swatches-rules('sky-night-top-mid');
+.make-color-swatches-rules('sky-night-bottom-mid');
