Fix: `-as-rgb()` colors using non-existent `@as-hsl`
• Changed `._*-as-rgb()` lambdas to use the correct `@as-rgb` var.
	» Many of the existing `._*-as-rgb()` lambdas were accidentally setting their returned `@…-as-rgb` var to `@as-hsl`, which is non-existent in that scope, which I guess defaults on the JS side to null and gets somehow processed into black.  Like weird that we didn't get an error.

--- a/less/colors.less
+++ b/less/colors.less
@@ -135,41 +135,41 @@
 ._teal-as-rgb() { .color-as-rgb(@teal); @teal-as-rgb: @as-hsl; } ._teal-as-rgb();
 ._yellow-as-rgb() { .color-as-rgb(@yellow); @yellow-as-rgb: @as-hsl; } ._yellow-as-rgb();
 
-._blue-dark-as-rgb() { .color-as-rgb(@blue-dark); @blue-dark-as-rgb: @as-hsl; } ._blue-dark-as-rgb();
-._cobalt-dark-as-rgb() { .color-as-rgb(@cobalt-dark); @cobalt-dark-as-rgb: @as-hsl; } ._cobalt-dark-as-rgb();
-._cyan-dark-as-rgb() { .color-as-rgb(@cyan-dark); @cyan-dark-as-rgb: @as-hsl; } ._cyan-dark-as-rgb();
-._green-dark-as-rgb() { .color-as-rgb(@green-dark); @green-dark-as-rgb: @as-hsl; } ._green-dark-as-rgb();
-._orange-dark-as-rgb() { .color-as-rgb(@orange-dark); @orange-dark-as-rgb: @as-hsl; } ._orange-dark-as-rgb();
-._purple-dark-as-rgb() { .color-as-rgb(@purple-dark); @purple-dark-as-rgb: @as-hsl; } ._purple-dark-as-rgb();
-._teal-dark-as-rgb() { .color-as-rgb(@teal-dark); @teal-dark-as-rgb: @as-hsl; } ._teal-dark-as-rgb();
-._yellow-dark-as-rgb() { .color-as-rgb(@yellow-dark); @yellow-dark-as-rgb: @as-hsl; } ._yellow-dark-as-rgb();
+._blue-dark-as-rgb() { .color-as-rgb(@blue-dark); @blue-dark-as-rgb: @as-rgb; } ._blue-dark-as-rgb();
+._cobalt-dark-as-rgb() { .color-as-rgb(@cobalt-dark); @cobalt-dark-as-rgb: @as-rgb; } ._cobalt-dark-as-rgb();
+._cyan-dark-as-rgb() { .color-as-rgb(@cyan-dark); @cyan-dark-as-rgb: @as-rgb; } ._cyan-dark-as-rgb();
+._green-dark-as-rgb() { .color-as-rgb(@green-dark); @green-dark-as-rgb: @as-rgb; } ._green-dark-as-rgb();
+._orange-dark-as-rgb() { .color-as-rgb(@orange-dark); @orange-dark-as-rgb: @as-rgb; } ._orange-dark-as-rgb();
+._purple-dark-as-rgb() { .color-as-rgb(@purple-dark); @purple-dark-as-rgb: @as-rgb; } ._purple-dark-as-rgb();
+._teal-dark-as-rgb() { .color-as-rgb(@teal-dark); @teal-dark-as-rgb: @as-rgb; } ._teal-dark-as-rgb();
+._yellow-dark-as-rgb() { .color-as-rgb(@yellow-dark); @yellow-dark-as-rgb: @as-rgb; } ._yellow-dark-as-rgb();
 
-._blue-darker-as-rgb() { .color-as-rgb(@blue-darker); @blue-darker-as-rgb: @as-hsl; } ._blue-darker-as-rgb();
-._cobalt-darker-as-rgb() { .color-as-rgb(@cobalt-darker); @cobalt-darker-as-rgb: @as-hsl; } ._cobalt-darker-as-rgb();
-._cyan-darker-as-rgb() { .color-as-rgb(@cyan-darker); @cyan-darker-as-rgb: @as-hsl; } ._cyan-darker-as-rgb();
-._green-darker-as-rgb() { .color-as-rgb(@green-darker); @green-darker-as-rgb: @as-hsl; } ._green-darker-as-rgb();
-._orange-darker-as-rgb() { .color-as-rgb(@orange-darker); @orange-darker-as-rgb: @as-hsl; } ._orange-darker-as-rgb();
-._purple-darker-as-rgb() { .color-as-rgb(@purple-darker); @purple-darker-as-rgb: @as-hsl; } ._purple-darker-as-rgb();
-._teal-darker-as-rgb() { .color-as-rgb(@teal-darker); @teal-darker-as-rgb: @as-hsl; } ._teal-darker-as-rgb();
-._yellow-darker-as-rgb() { .color-as-rgb(@yellow-darker); @yellow-darker-as-rgb: @as-hsl; } ._yellow-darker-as-rgb();
+._blue-darker-as-rgb() { .color-as-rgb(@blue-darker); @blue-darker-as-rgb: @as-rgb; } ._blue-darker-as-rgb();
+._cobalt-darker-as-rgb() { .color-as-rgb(@cobalt-darker); @cobalt-darker-as-rgb: @as-rgb; } ._cobalt-darker-as-rgb();
+._cyan-darker-as-rgb() { .color-as-rgb(@cyan-darker); @cyan-darker-as-rgb: @as-rgb; } ._cyan-darker-as-rgb();
+._green-darker-as-rgb() { .color-as-rgb(@green-darker); @green-darker-as-rgb: @as-rgb; } ._green-darker-as-rgb();
+._orange-darker-as-rgb() { .color-as-rgb(@orange-darker); @orange-darker-as-rgb: @as-rgb; } ._orange-darker-as-rgb();
+._purple-darker-as-rgb() { .color-as-rgb(@purple-darker); @purple-darker-as-rgb: @as-rgb; } ._purple-darker-as-rgb();
+._teal-darker-as-rgb() { .color-as-rgb(@teal-darker); @teal-darker-as-rgb: @as-rgb; } ._teal-darker-as-rgb();
+._yellow-darker-as-rgb() { .color-as-rgb(@yellow-darker); @yellow-darker-as-rgb: @as-rgb; } ._yellow-darker-as-rgb();
 
-._blue-light-as-rgb() { .color-as-rgb(@blue-light); @blue-light-as-rgb: @as-hsl; } ._blue-light-as-rgb();
-._cobalt-light-as-rgb() { .color-as-rgb(@cobalt-light); @cobalt-light-as-rgb: @as-hsl; } ._cobalt-light-as-rgb();
-._cyan-light-as-rgb() { .color-as-rgb(@cyan-light); @cyan-light-as-rgb: @as-hsl; } ._cyan-light-as-rgb();
-._green-light-as-rgb() { .color-as-rgb(@green-light); @green-light-as-rgb: @as-hsl; } ._green-light-as-rgb();
-._orange-light-as-rgb() { .color-as-rgb(@orange-light); @orange-light-as-rgb: @as-hsl; } ._orange-light-as-rgb();
-._purple-light-as-rgb() { .color-as-rgb(@purple-light); @purple-light-as-rgb: @as-hsl; } ._purple-light-as-rgb();
-._teal-light-as-rgb() { .color-as-rgb(@teal-light); @teal-light-as-rgb: @as-hsl; } ._teal-light-as-rgb();
-._yellow-light-as-rgb() { .color-as-rgb(@yellow-light); @yellow-light-as-rgb: @as-hsl; } ._yellow-light-as-rgb();
+._blue-light-as-rgb() { .color-as-rgb(@blue-light); @blue-light-as-rgb: @as-rgb; } ._blue-light-as-rgb();
+._cobalt-light-as-rgb() { .color-as-rgb(@cobalt-light); @cobalt-light-as-rgb: @as-rgb; } ._cobalt-light-as-rgb();
+._cyan-light-as-rgb() { .color-as-rgb(@cyan-light); @cyan-light-as-rgb: @as-rgb; } ._cyan-light-as-rgb();
+._green-light-as-rgb() { .color-as-rgb(@green-light); @green-light-as-rgb: @as-rgb; } ._green-light-as-rgb();
+._orange-light-as-rgb() { .color-as-rgb(@orange-light); @orange-light-as-rgb: @as-rgb; } ._orange-light-as-rgb();
+._purple-light-as-rgb() { .color-as-rgb(@purple-light); @purple-light-as-rgb: @as-rgb; } ._purple-light-as-rgb();
+._teal-light-as-rgb() { .color-as-rgb(@teal-light); @teal-light-as-rgb: @as-rgb; } ._teal-light-as-rgb();
+._yellow-light-as-rgb() { .color-as-rgb(@yellow-light); @yellow-light-as-rgb: @as-rgb; } ._yellow-light-as-rgb();
 
-._blue-lighter-as-rgb() { .color-as-rgb(@blue-lighter); @blue-lighter-as-rgb: @as-hsl; } ._blue-lighter-as-rgb();
-._cobalt-lighter-as-rgb() { .color-as-rgb(@cobalt-lighter); @cobalt-lighter-as-rgb: @as-hsl; } ._cobalt-lighter-as-rgb();
-._cyan-lighter-as-rgb() { .color-as-rgb(@cyan-lighter); @cyan-lighter-as-rgb: @as-hsl; } ._cyan-lighter-as-rgb();
-._green-lighter-as-rgb() { .color-as-rgb(@green-lighter); @green-lighter-as-rgb: @as-hsl; } ._green-lighter-as-rgb();
-._orange-lighter-as-rgb() { .color-as-rgb(@orange-lighter); @orange-lighter-as-rgb: @as-hsl; } ._orange-lighter-as-rgb();
-._purple-lighter-as-rgb() { .color-as-rgb(@purple-lighter); @purple-lighter-as-rgb: @as-hsl; } ._purple-lighter-as-rgb();
-._teal-lighter-as-rgb() { .color-as-rgb(@teal-lighter); @teal-lighter-as-rgb: @as-hsl; } ._teal-lighter-as-rgb();
-._yellow-lighter-as-rgb() { .color-as-rgb(@yellow-lighter); @yellow-lighter-as-rgb: @as-hsl; } ._yellow-lighter-as-rgb();
+._blue-lighter-as-rgb() { .color-as-rgb(@blue-lighter); @blue-lighter-as-rgb: @as-rgb; } ._blue-lighter-as-rgb();
+._cobalt-lighter-as-rgb() { .color-as-rgb(@cobalt-lighter); @cobalt-lighter-as-rgb: @as-rgb; } ._cobalt-lighter-as-rgb();
+._cyan-lighter-as-rgb() { .color-as-rgb(@cyan-lighter); @cyan-lighter-as-rgb: @as-rgb; } ._cyan-lighter-as-rgb();
+._green-lighter-as-rgb() { .color-as-rgb(@green-lighter); @green-lighter-as-rgb: @as-rgb; } ._green-lighter-as-rgb();
+._orange-lighter-as-rgb() { .color-as-rgb(@orange-lighter); @orange-lighter-as-rgb: @as-rgb; } ._orange-lighter-as-rgb();
+._purple-lighter-as-rgb() { .color-as-rgb(@purple-lighter); @purple-lighter-as-rgb: @as-rgb; } ._purple-lighter-as-rgb();
+._teal-lighter-as-rgb() { .color-as-rgb(@teal-lighter); @teal-lighter-as-rgb: @as-rgb; } ._teal-lighter-as-rgb();
+._yellow-lighter-as-rgb() { .color-as-rgb(@yellow-lighter); @yellow-lighter-as-rgb: @as-rgb; } ._yellow-lighter-as-rgb();
 
 ._sky-eve-top-as-rgb { .color-as-rgb(@sky-eve-top); @sky-eve-top-as-rgb: @as-rgb; } ._sky-eve-top-as-rgb();
 ._sky-eve-mid-as-rgb { .color-as-rgb(@sky-eve-mid); @sky-eve-mid-as-rgb: @as-rgb; } ._sky-eve-mid-as-rgb();
