--- a/less/styles-test.less
+++ b/less/styles-test.less
@@ -56,6 +56,14 @@ h1 { color: hsl(0, 0%, 50%); }
 	margin: 4px;
 	border-radius: 3px;
 	
+	border: 1px solid rgba(50%, 50%, 50%, 0.2);
+	.on-dark & {
+		border: 1px solid rgba(90%, 90%, 90%, 0.1);
+	}
+	.on-light & {
+		border: 1px solid rgba(10%, 10%, 10%, 0.1);
+	}
+	
 	&:after {
 		.small;
 		font-size: 10px;
